--- a/Spotify.html
+++ b/Spotify.html
@@ -12,8 +12,12 @@
     <link rel="stylesheet" href="spotifyClone.css">
 </head>
 <body>
-    <div class="main"></div>
-    <div class="sidebar-content"></div>
-    <div class="media-player-sesction"></div>
-</body>
+    <div class="main">
+    
+        <div class="sidebar-content">SideBar</div>
+        <div class="main-content">Main content</div>
+        <div class="mediaplayer-sesction">mediaplayer section</div>
+    </div>
+   
+    </body>
 </html>
