--- a/Spotify.html
+++ b/Spotify.html
@@ -24,7 +24,7 @@
     <div class="main">
       <div class="sidebar-content">
         <div class="home-section">
-          <div class="home">
+          <div class="home" style="opacity: 1">
             <i class="fa-solid fa-house"></i>
             <a href="#">Home</a>
           </div>
