--- a/Spotify.html
+++ b/Spotify.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <div class="main">
+      <!-- Sidebar section -->
       <div class="sidebar-content">
         <div class="home-section">
           <div class="home" style="opacity: 1">
@@ -33,8 +34,24 @@
             <a href="#">Search</a>
           </div>
         </div>
-
-        <div class="library-section">library</div>
+        <!-- Your library -->
+        <div class="library-section">
+          <div class="Your-library">
+            <img
+              class="library-image"
+              src="/assets//library_icon.png"
+              alt="library-icon"
+            />
+            <a href="#">Your library</a>
+            <div class="icons">
+              <i class="fa-solid fa-plus"></i>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
+          <!-- Creat playlist & Browse poscasts -->
+          <div class="library-playlist">creat-playlist</div>
+          <div class="library-podcast">creat-podcast</div>
+        </div>
       </div>
       <div class="main-content">Main content</div>
       <div class="mediaplayer-section">mediaplayer section</div>
