Build Home & library section

--- a/Spotify.html
+++ b/Spotify.html
@@ -37,18 +37,16 @@
         <!-- Your library -->
         <div class="library-section">
           <div class="Your-library">
-            <img
-              class="library-image"
-              src="/assets//library_icon.png"
-              alt="library-icon"
-            />
-            <a href="#">Your library</a>
-            <div class="icons">
+            <div class="icons home">
+              <img src="/assets//library_icon.png" alt="library-icon" />
+              <a href="#">Your library</a>
+            </div>
+            <div class="side-icons">
               <i class="fa-solid fa-plus"></i>
               <i class="fa-solid fa-arrow-right"></i>
             </div>
           </div>
-          <!-- Creat playlist & Browse poscasts -->
+          <!-- Create playlist & Browse poscasts -->
           <div class="library-playlist">creat-playlist</div>
           <div class="library-podcast">creat-podcast</div>
         </div>
