Fixed bg & icon color

--- a/Spotify.html
+++ b/Spotify.html
@@ -47,7 +47,7 @@
             </div>
           </div>
           <!-- Create playlist & Browse poscasts -->
-          <div class="library-playlist">creat-playlist</div>
+          <div class="library-playlist"></div>
           <div class="library-podcast">creat-podcast</div>
         </div>
       </div>
