--- a/Spotify.html
+++ b/Spotify.html
@@ -34,7 +34,7 @@
             <a href="#">Search</a>
           </div>
         </div>
-        <!-- Your library -->
+        <!-- Your library--sidebar -->
         <div class="library-section">
           <div class="Your-library">
             <div class="icons home">
@@ -46,10 +46,19 @@
               <i class="fa-solid fa-arrow-right"></i>
             </div>
           </div>
-          <!-- Create playlist & Browse poscasts -->
-          <div class="library-playlist"></div>
-          <div class="library-podcast">creat-podcast</div>
-        </div>
+          <!-- Create playlist & Browse poscasts --sidebar -->
+          <div class="library-playlist">
+            <p class="heading">Create your first playlist</p>
+            <p class="disc">Its`s easy,we'll help you</p>
+            <button class="badge">Create playlist</button>
+          </div>
+        
+          <div class="library-playlist">
+            <p class="heading">Let's find some podcasts to follow</p>
+            <p class="disc">We'll keep you updated on new episodes</p>
+            <button class="badge">Create playlist</button>
+          </div>
+        
       </div>
       <div class="main-content">Main content</div>
       <div class="mediaplayer-section">mediaplayer section</div>
