Fixed podcast-section width

--- a/Spotify.html
+++ b/Spotify.html
@@ -53,7 +53,7 @@
             <button class="badge">Create playlist</button>
           </div>
         
-          <div class="library-playlist">
+          <div class="library-podcast">
             <p class="heading">Let's find some podcasts to follow</p>
             <p class="disc">We'll keep you updated on new episodes</p>
             <button class="badge">Create playlist</button>
