Initilize card setup

--- a/Spotify.html
+++ b/Spotify.html
@@ -73,7 +73,24 @@
           <i class="fa-regular fa-user nav-item nav-user"></i>
         </div>
       </div>
-      <div class="cards"></div>
+      <!-- Display-cards-section -->
+      <div class="cards">
+        <div class="card-main-head">
+          <h2>Recently played</h2>
+        </div>
+        <!-- Card-01 -->
+        <div class="card-item">
+          <img src="./assets//card1img.jpeg" alt="">
+          <div class="card-inner">
+            <div class="card-head">
+              <p>Top 50 - Global</p>
+            </div>
+            <p card-Disc>Your daily update of the most played tracks night ..</p>
+          </div>
+
+
+        </div>
+      </div>
 
     </div>
     <div class="mediaplayer-section">mediaplayer section</div>
