--- a/Spotify.html
+++ b/Spotify.html
@@ -80,20 +80,57 @@
         </div>
         <!-- Card-01 -->
         <div class="card-item">
-          <img src="./assets//card1img.jpeg" alt="">
+          <img src="./assets//card1img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
           <div class="card-inner">
             <div class="card-head">
               <p>Top 50 - Global</p>
             </div>
-            <p card-Disc>Your daily update of the most played tracks night ..</p>
+            <p class="card-disc">Your daily updates of most played tracks... </p>
           </div>
-
-
         </div>
-      </div>
+        <!-- Card-02 -->
+        <div class="card-main-head">
+          <h2>Trending now near you</h2>
+        </div>
+        <div class="card-item">
+          <img src="./assets//card2img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+          <div class="card-inner">
+            <div class="card-head">
+              <p>Top 50 - Global</p>
+            </div>
+            <p class="card-disc">Your daily updates of most played tracks... </p>
+          </div>
+        </div>
+        <!-- Card-03 -->
+        <div class="card-main-head">
+          <h2>Trending now near you</h2>
+        </div>
+        <div class="card-item">
+          <img src="./assets//card3img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+          <div class="card-inner">
+            <div class="card-head">
+              <p>Top 50 - Global</p>
+            </div>
+            <p class="card-disc">Your daily updates of most played tracks... </p>
+          </div>
+        </div>
+        <!-- Card-04 -->
+        <div class="card-main-head">
+          <h2>Trending now near you</h2>
+        </div>
+        <div class="card-item">
+          <img src="./assets//card4img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+          <div class="card-inner">
+            <div class="card-head">
+              <p>Top 50 - Global</p>
+            </div>
+            <p class="card-disc">Your daily updates of most played tracks... </p>
+          </div>
+        </div>
 
-    </div>
-    <div class="mediaplayer-section">mediaplayer section</div>
+      </div>
+      <!--Media-player-section  -->
+      <div class="media-player">mediaplayer section</div>
 </body>
 
 </html>
