--- a/Spotify.html
+++ b/Spotify.html
@@ -78,7 +78,7 @@
         <div class="card-main-head">
           <h2>Recently played</h2>
         </div>
-        <!-- Card-01 -->
+        <!-- Card-01 & Line-01 -->
         <div class="card-item">
           <img src="./assets//card1img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
           <div class="card-inner">
@@ -88,49 +88,109 @@
             <p class="card-disc">Your daily updates of most played tracks... </p>
           </div>
         </div>
-        <!-- Card-02 -->
+        <!-- Card-02 & Line-02 -->
         <div class="card-main-head">
           <h2>Trending now near you</h2>
         </div>
-        <div class="card-item">
-          <img src="./assets//card2img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
-          <div class="card-inner">
-            <div class="card-head">
-              <p>Top 50 - Global</p>
+        <div class="card-list-below">
+
+          <div class="card-item">
+            <img src="./assets//card2img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <div class="card-inner">
+              <div class="card-head">
+                <p>Top 50 - Global</p>
+              </div>
+              <p class="card-disc">Your daily updates of most played tracks... </p>
             </div>
-            <p class="card-disc">Your daily updates of most played tracks... </p>
+          </div>
+          <!-- Card-03 -->
+          <div class="card-item">
+            <img src="./assets//card3img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <div class="card-inner">
+              <div class="card-head">
+                <p>Top 50 - Global</p>
+              </div>
+              <p class="card-disc">Your daily updates of most played tracks... </p>
+            </div>
+          </div>
+          <!-- Card-04 -->
+          <div class="card-item">
+            <img src="./assets//card4img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <div class="card-inner">
+              <div class="card-head">
+                <p>Top 50 - Global</p>
+              </div>
+              <p class="card-disc">Your daily updates of most played tracks... </p>
+            </div>
+          </div>
+          <!-- Card-05 -->
+          <div class="card-item">
+            <img src="./assets//card3img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <div class="card-inner">
+              <div class="card-head">
+                <p>Top 50 - Global</p>
+              </div>
+              <p class="card-disc">Your daily updates of most played tracks... </p>
+            </div>
+          </div>
+          <!-- Card-06 -->
+          <div class="card-item">
+            <img src="./assets//card4img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <div class="card-inner">
+              <div class="card-head">
+                <p>Top 50 - Global</p>
+              </div>
+              <p class="card-disc">Your daily updates of most played tracks... </p>
+            </div>
           </div>
         </div>
-        <!-- Card-03 -->
-        <div class="card-main-head">
-          <h2>Trending now near you</h2>
-        </div>
-        <div class="card-item">
-          <img src="./assets//card3img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
-          <div class="card-inner">
-            <div class="card-head">
-              <p>Top 50 - Global</p>
-            </div>
-            <p class="card-disc">Your daily updates of most played tracks... </p>
+        <!-- Line-03 Heading -->
+        <div class="cards">
+          <div class="card-main-head">
+            <h2>Featured Content</h2>
           </div>
         </div>
-        <!-- Card-04 -->
-        <div class="card-main-head">
-          <h2>Trending now near you</h2>
-        </div>
-        <div class="card-item">
-          <img src="./assets//card4img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
-          <div class="card-inner">
-            <div class="card-head">
-              <p>Top 50 - Global</p>
+        <!-- Card-07 & Line-03 -->
+        <div class="card-list-below">
+
+          <div class="card-item">
+            <img src="./assets//card5img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <div class="card-inner">
+              <div class="card-head">
+                <p>Top 50 - Global</p>
+              </div>
+              <p class="card-disc">Your daily updates of most played tracks... </p>
             </div>
-            <p class="card-disc">Your daily updates of most played tracks... </p>
           </div>
+          <!-- card-08 -->
+          <div class="card-item">
+            <img src="./assets//card6img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <div class="card-inner">
+              <div class="card-head">
+                <p>Top 50 - Global</p>
+              </div>
+              <p class="card-disc">Your daily updates of most played tracks... </p>
+            </div>
+          </div>
+          <!-- card-09 -->
+          <div class="card-item">
+            <img src="./assets//card1img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <div class="card-inner">
+              <div class="card-head">
+                <p>Top 50 - Global</p>
+              </div>
+              <p class="card-disc">Your daily updates of most played tracks... </p>
+            </div>
+          </div>
+
+
         </div>
 
-      </div>
-      <!--Media-player-section  -->
-      <div class="media-player">mediaplayer section</div>
+
+
+
+        <!--Media-player-section  -->
+        <div class="media-player">mediaplayer section</div>
 </body>
 
 </html>
