Finished Content section

--- a/Spotify.html
+++ b/Spotify.html
@@ -182,7 +182,12 @@
               <p class="card-disc">Your daily updates of most played tracks... </p>
             </div>
           </div>
+          <!--
+          Main-content-footer-Line-->
+          <div class="footer">
 
+            <div class="line"></div>
+          </div>
 
         </div>
 
