Build initial structure

--- a/Spotify.html
+++ b/Spotify.html
@@ -185,13 +185,50 @@
           <!--
           Main-content-footer-Line-->
           <div class="footer">
-
             <div class="line"></div>
           </div>
+          <!--Media-player-section  -->
+        </div>
+        <div class="media-player-main">
+          <!-- img &songName & add btn-->
+          <div class="p1">
+            <div class="music-image"></div>
+            <div class="song-name"></div>
+            <div class="add-btn"></div>
+          </div>
+          <!-- Media player & their itemz -->
+          <div class="p2">
+            <div class="media-player-btns">
+              <div class="shuffel-prev"></div>
+              <span class="play-pause-btn"></span>
+              <div class="next-repeat"></div>
+            </div>
+            <!-- Media-player-bar -->
+            <div class="media-run-time"></div>
+            <div class="media-bar"></div>
+            <div class="song-play-time"></div>
+            <div class="media-player-bar"></div>
+            <div class="song-time"></div>
+          </div>
+
+          <!-- volume & resize btn etc -->
+          <div class="p3">
+
+          </div>
+
+
+
+
+
+
+
+
         </div>
 
-        <!--Media-player-section  -->
-        <div class="media-player">mediaplayer section</div>
+
+
+
+
 
 
 
