Finished gallery section

--- a/Spotify.html
+++ b/Spotify.html
@@ -95,7 +95,7 @@
         <div class="card-list-below">
 
           <div class="card-item">
-            <img src="./assets//card2img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <img src="./assets//card9img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
             <div class="card-inner">
               <div class="card-head">
                 <p>Top 50 - Global</p>
@@ -115,7 +115,7 @@
           </div>
           <!-- Card-04 -->
           <div class="card-item">
-            <img src="./assets//card4img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <img src="./assets//card11img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
             <div class="card-inner">
               <div class="card-head">
                 <p>Top 50 - Global</p>
@@ -125,7 +125,7 @@
           </div>
           <!-- Card-05 -->
           <div class="card-item">
-            <img src="./assets//card3img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <img src="./assets//card8img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
             <div class="card-inner">
               <div class="card-head">
                 <p>Top 50 - Global</p>
@@ -189,50 +189,44 @@
           </div>
           <!--Media-player-section  -->
         </div>
-        <div class="media-player-main">
-          <!-- img &songName & add btn-->
-          <div class="p1">
-            <div class="music-image"></div>
-            <div class="song-name"></div>
-            <div class="add-btn"></div>
-          </div>
-          <!-- Media player & their itemz -->
-          <div class="p2">
-            <div class="media-player-btns">
-              <div class="shuffel-prev"></div>
-              <span class="play-pause-btn"></span>
-              <div class="next-repeat"></div>
-            </div>
-            <!-- Media-player-bar -->
-            <div class="media-run-time"></div>
-            <div class="media-bar"></div>
-            <div class="song-play-time"></div>
-            <div class="media-player-bar"></div>
-            <div class="song-time"></div>
-          </div>
 
-          <!-- volume & resize btn etc -->
-          <div class="p3">
-
-          </div>
-
-
-
-
-
-
-
-
+      </div>
+    </div>
+    <div class="media-player-main">
+      <!-- img & songName & add btn-->
+      <div class="p1">
+        <div> <img src="./assets/card3img.jpeg" alt="mediaImage" style="height: 56px;width: 56px;">
         </div>
+        <div class="song-disc">
+
+          <div class="song-name"><a href="#">Nahin Milta</a></div>
+          <div class="author"><a href="#">Bayaan</a></div>
+        </div>
+        <div class="add-btn"><i class="fa-solid fa-square-plus" style="height: 16px;width: 16px;"></i></div>
+      </div>
+      <!-- Media player & their itemz -->
+      <div class="p2">
+        <div class="media-player-btns">
+          <div class="shuffel-prev"><img src="./assets/player_icon1.png" alt="shuffel"></div>
+          <span class="play-pause-btn"><img src="./assets//player_icon2.png" alt=""></span>
+          <div class="next"><img src="./assets//card3img.jpeg" alt=""></div>
+          <div class="repeat"><img src="" alt=""></div>
+        </div>
+        <!-- Media-player-bar -->
+        <div class="media-run-time"></div>
+        <div class="media-bar"></div>
+        <div class="song-play-time"></div>
+        <div class="media-player-bar"></div>
+        <div class="song-time"></div>
+      </div>
+
+      <!-- volume & resize btn etc -->
+      <div class="p3">
+        <h1>hello</h1>
+      </div>
 
 
-
-
-
-
-
-
-
+    </div>
 </body>
 
 </html>
