Modify media section

--- a/Spotify.html
+++ b/Spotify.html
@@ -80,12 +80,12 @@
         </div>
         <!-- Card-01 & Line-01 -->
         <div class="card-item">
-          <img src="./assets//card1img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+          <img src="./assets//card19img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
           <div class="card-inner">
             <div class="card-head">
-              <p>Top 50 - Global</p>
+              <p>Feed Mind With Success </p>
             </div>
-            <p class="card-disc">Your daily updates of most played tracks... </p>
+            <p class="card-disc">Fearless Motivation... </p>
           </div>
         </div>
         <!-- Card-02 & Line-02 -->
@@ -174,7 +174,7 @@
           </div>
           <!-- card-09 -->
           <div class="card-item">
-            <img src="./assets//card1img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <img src="./assets//card13img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
             <div class="card-inner">
               <div class="card-head">
                 <p>Top 50 - Global</p>
@@ -207,17 +207,22 @@
       <!-- Media player & their itemz -->
       <div class="p2">
         <div class="media-player-btns">
-          <div class="shuffel-prev"><img src="./assets/player_icon1.png" alt="shuffel"></div>
-          <span class="play-pause-btn"><img src="./assets//player_icon2.png" alt=""></span>
-          <div class="next"><img src="./assets//card3img.jpeg" alt=""></div>
+          <div class="play-icon"><img src="./assets/player_icon1.png" alt="shuffel"></div>
+          <span class="play-icon"><img src="./assets/player_icon2.png" alt="prev"></span>
+          <div class="play-icon3"><img src="./assets/player_icon3.png" alt="pause-play"
+              style="opacity: 1;height: 2.1rem;width: 2.1rem;"></div>
+          <div class="play-icon"><img src="./assets/player_icon4.png" alt="next"></div>
+          <div class="play-icon"><img src="./assets/player_icon5.png" alt="repeat"></div>
           <div class="repeat"><img src="" alt=""></div>
         </div>
-        <!-- Media-player-bar -->
-        <div class="media-run-time"></div>
-        <div class="media-bar"></div>
-        <div class="song-play-time"></div>
-        <div class="media-player-bar"></div>
-        <div class="song-time"></div>
+        <!-- Media-progress-bar -->
+        <div class="media-bar-visual">
+          <div>00:00</div>
+          <div class="progress-bar"> <input type="range" id="vol" name="vol" min="0" max="50">
+          </div>
+          <div>3:03</div>
+
+        </div>
       </div>
 
       <!-- volume & resize btn etc -->
