Fix media section

--- a/Spotify.html
+++ b/Spotify.html
@@ -51,8 +51,8 @@
 
         <div class="library-podcast">
           <p class="heading">Let's find some podcasts to follow</p>
-          <p class="disc">We'll keep you updated on new episodes</p>
-          <button class="badge">Create playlist</button>
+          <p class="disc pod-disc">We'll keep you updated.</p>
+          <button class="badge badge2">Create playlist</button>
         </div>
       </div>
     </div>
@@ -182,6 +182,16 @@
               <p class="card-disc">Your daily updates of most played tracks... </p>
             </div>
           </div>
+          <!-- card-10 -->
+          <div class="card-item">
+            <img src="./assets//card14img.jpeg" alt="card-Image" style="width: 100%;border-radius: 0.5rem;">
+            <div class="card-inner">
+              <div class="card-head">
+                <p>Top 50 - Global</p>
+              </div>
+              <p class="card-disc">Your daily updates of most played tracks... </p>
+            </div>
+          </div>
           <!--
           Main-content-footer-Line-->
           <div class="footer">
@@ -217,17 +227,20 @@
         </div>
         <!-- Media-progress-bar -->
         <div class="media-bar-visual">
-          <div>00:00</div>
+          <div class="time">
+            00:00
+          </div>
           <div class="progress-bar"> <input type="range" id="vol" name="vol" min="0" max="50">
           </div>
-          <div>3:03</div>
+          <div class="time ">
+            3:03
+          </div>
 
         </div>
       </div>
 
       <!-- volume & resize btn etc -->
       <div class="p3">
-        <h1>hello</h1>
       </div>
 
 
